5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1593_2425.log
== TEST (2019-03-23 20:34:44) 
-- CODE:
dist = float(input("Distancia percorrida:"))
Cbg = float(input("Combustivel gasto:"))
print(round(dist/Cbg, 3))print(km/l)
-- ERROR:
File "XXXX", line 3
    print(round(dist/Cbg, 3))print(km/l)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:34:49) 
-- CODE:
dist = float(input("Distancia percorrida:"))
Cbg = float(input("Combustivel gasto:"))
print(round(dist/Cbg, 3)) print(km/l)
-- ERROR:
File "XXXX", line 3
    print(round(dist/Cbg, 3)) print(km/l)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:34:52) 
-- CODE:
dist = float(input("Distancia percorrida:"))
Cbg = float(input("Combustivel gasto:"))
print(round(dist/Cbg, 3)) 
print(km/l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(km/l)
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 20:35:15) 
-- CODE:
dist = float(input("Distancia percorrida:"))
Cbg = float(input("Combustivel gasto:"))
print(round(dist/Cbg, 3)) 
print("km/l")
-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 20:35:20) 
-- CODE:
dist = float(input("Distancia percorrida:"))
Cbg = float(input("Combustivel gasto:"))
print(round(dist/Cbg, 3)) 
print("km/l")
-- EXECUTION TIME:
0.135445
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
